# fastapi_learning

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
